Continous integration of JWT and register / login

--- a/PersonalHub.Api/appsettings.Development.json
+++ b/PersonalHub.Api/appsettings.Development.json
@@ -7,5 +7,11 @@
     },
     "ConnectionStrings": {
         "PersonalHubDbContext": ""
+    },
+    "JwtSettings": {
+        "Issuer": "https://localhost:7149/",
+        "Audience": "https://localhost:7149/",
+        "DurationInMinutes": 10,
+        "Key": ""
     }
 }
