Started adding Owner and User role

--- a/PersonalHub.Api/appsettings.Development.json
+++ b/PersonalHub.Api/appsettings.Development.json
@@ -13,5 +13,8 @@
         "Audience": "https://localhost:7149/",
         "DurationInMinutes": 10,
         "Key": ""
+    },
+    "UserAuth": {
+        "Pwd": ""
     }
 }
