Added refresh token

--- a/PersonalHub.Application/PersonalHub.Application.csproj
+++ b/PersonalHub.Application/PersonalHub.Application.csproj
@@ -14,4 +14,8 @@
 		<ProjectReference Include="..\PersonalHub.Domain\PersonalHub.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Utilities\" />
+	</ItemGroup>
+
 </Project>
