Added Default User, Role, and UserRole

--- a/PersonalHub.Api/PersonalHub.Api.csproj
+++ b/PersonalHub.Api/PersonalHub.Api.csproj
@@ -17,6 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\PersonalHub.Application\PersonalHub.Application.csproj" />
 		<ProjectReference Include="..\PersonalHub.Infrastructure\PersonalHub.Infrastructure.csproj" />
 	</ItemGroup>
 
