--- a/PersonalHub.Api/appsettings.Development.json
+++ b/PersonalHub.Api/appsettings.Development.json
@@ -15,6 +15,11 @@
         "Key": ""
     },
     "UserAuth": {
-        "Pwd": ""
+        "FirstName": "",
+        "LastName": "",
+        "Email": "",
+        "Pwd": "",
+        "UserId": "",
+        "RoleId": ""
     }
 }
