--- a/PersonalHub.Infrastructure/PersonalHub.Infrastructure.csproj
+++ b/PersonalHub.Infrastructure/PersonalHub.Infrastructure.csproj
@@ -22,6 +22,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\PersonalHub.Application\PersonalHub.Application.csproj" />
+		<ProjectReference Include="..\PersonalHub.Domain\PersonalHub.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
