--- a/PersonalHub.Api/appsettings.Development.json
+++ b/PersonalHub.Api/appsettings.Development.json
@@ -1,8 +1,25 @@
 {
-    "Logging": {
-        "LogLevel": {
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.File" ],
+        "MinimumLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "Logs/log-.txt",
+                    "rollingInterval": "Day"
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName" ],
+        "Properties": {
+            "ApplicationName": "PersonalHub"
         }
     },
     "ConnectionStrings": {
