--- a/PersonalHub.Domain/PersonalHub.Domain.csproj
+++ b/PersonalHub.Domain/PersonalHub.Domain.csproj
@@ -11,7 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Workspace\ValueObjects\" />
+	  <Folder Include="Feedback\ValueObjects\" />
 	</ItemGroup>
 
 </Project>
