Renamed project from PersonalHub to ProjectHub

--- a/ProjectHub.Api/ProjectHub.Api.csproj
+++ b/ProjectHub.Api/ProjectHub.Api.csproj
@@ -21,8 +21,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\PersonalHub.Application\PersonalHub.Application.csproj" />
-		<ProjectReference Include="..\PersonalHub.Infrastructure\PersonalHub.Infrastructure.csproj" />
+		<ProjectReference Include="..\ProjectHub.Application\ProjectHub.Application.csproj" />
+		<ProjectReference Include="..\ProjectHub.Infrastructure\ProjectHub.Infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
