--- a/ProjectHub.Infrastructure/ProjectHub.Infrastructure.csproj
+++ b/ProjectHub.Infrastructure/ProjectHub.Infrastructure.csproj
@@ -21,8 +21,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\PersonalHub.Application\PersonalHub.Application.csproj" />
-		<ProjectReference Include="..\PersonalHub.Domain\PersonalHub.Domain.csproj" />
+		<ProjectReference Include="..\ProjectHub.Application\ProjectHub.Application.csproj" />
+		<ProjectReference Include="..\ProjectHub.Domain\ProjectHub.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
