Changed name of DB and removed the remainders of the name PersonalHub

--- a/ProjectHub.Api/appsettings.Development.json
+++ b/ProjectHub.Api/appsettings.Development.json
@@ -19,11 +19,11 @@
         ],
         "Enrich": [ "FromLogContext", "WithMachineName" ],
         "Properties": {
-            "ApplicationName": "PersonalHub"
+            "ApplicationName": "ProjectHub"
         }
     },
     "ConnectionStrings": {
-        "PersonalHubDbContext": ""
+        "ProjectHubDbContext": ""
     },
     "JwtSettings": {
         "Issuer": "https://localhost:7149/",
