--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Execute unit tests
-      run: dotnet test -v detailed
+      run: dotnet test
 
     - name: Restore the application
       run: dotnet restore $Solution_Name
